# bazel_springboot_kotlin

./: BUILD.bazel  README.md  WORKSPACE  build.gradle  settings.gradle
.github/workflows/: main.yml
src/main/kotlin/com/example/kotlin_springboot/: KotlinSpringbootApplication.kt
src/test/kotlin/com/example/kotlin_springboot/: KotlinSpringbootApplicationTests.kt
