load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_spring//springboot:springboot.bzl", "springboot")

package(default_visibility = ["//visibility:public"])

runtime_deps = [
    "@maven//:org_jetbrains_annotations",
    "@maven//:org_jetbrains_kotlin_kotlin_reflect",
    "@maven//:org_jetbrains_kotlin_kotlin_stdlib_common",
    "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    "@com_github_jetbrains_kotlin//:kotlin-stdlib",
    "@com_github_jetbrains_kotlin//:kotlin-stdlib-jdk7",
    "@com_github_jetbrains_kotlin//:kotlin-stdlib-jdk8",
]

kt_jvm_library(
    name = "maven_springboot-library",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    runtime_deps = runtime_deps,
    deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jdk8",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
        "@maven//:com_fasterxml_jackson_module_jackson_module_parameter_names",
        "@maven//:com_jayway_jsonpath_json_path",
        "@maven//:com_vaadin_external_google_android_json",
        "@maven//:jakarta_activation_jakarta_activation_api",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:jakarta_xml_bind_jakarta_xml_bind_api",
        "@maven//:net_bytebuddy_byte_buddy",
        "@maven//:net_bytebuddy_byte_buddy_agent",
        "@maven//:net_minidev_accessors_smart",
        "@maven//:net_minidev_json_smart",
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_apache_logging_log4j_log4j_to_slf4j",
        "@maven//:org_apache_tomcat_embed_tomcat_embed_core",
        "@maven//:org_apache_tomcat_embed_tomcat_embed_el",
        "@maven//:org_apache_tomcat_embed_tomcat_embed_websocket",
        "@maven//:org_apiguardian_apiguardian_api",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_hamcrest_hamcrest",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_junit_platform_junit_platform_commons",
        "@maven//:org_junit_platform_junit_platform_engine",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_junit_jupiter",
        "@maven//:org_objenesis_objenesis",
        "@maven//:org_opentest4j_opentest4j",
        "@maven//:org_ow2_asm_asm",
        "@maven//:org_skyscreamer_jsonassert",
        "@maven//:org_slf4j_jul_to_slf4j",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_loader",
        "@maven//:org_springframework_boot_spring_boot_starter",
        "@maven//:org_springframework_boot_spring_boot_starter_json",
        "@maven//:org_springframework_boot_spring_boot_starter_logging",
        "@maven//:org_springframework_boot_spring_boot_starter_test",
        "@maven//:org_springframework_boot_spring_boot_starter_tomcat",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_boot_spring_boot_test",
        "@maven//:org_springframework_boot_spring_boot_test_autoconfigure",
        "@maven//:org_springframework_spring_aop",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_expression",
        "@maven//:org_springframework_spring_jcl",
        "@maven//:org_springframework_spring_test",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_webmvc",
        "@maven//:org_xmlunit_xmlunit_core",
        "@maven//:org_yaml_snakeyaml",
    ],
)

springboot(
    name = "kotlin_springboot",
    boot_app_class = "com.example.kotlin_springboot.KotlinSpringbootApplicationKt",
    java_library = ":maven_springboot-library",
)

kt_jvm_binary(
        name = "springboot",
        srcs = glob([
            "src/main/kotlin/**/*.kt",
        ]),
        resources = glob([
            "src/main/resources/**",
        ]),
        main_class = "com.example.kotlin_springboot.KotlinSpringbootApplicationKt",
        runtime_deps = runtime_deps,
        deps = [
            "@maven//:ch_qos_logback_logback_classic",
            "@maven//:ch_qos_logback_logback_core",
            "@maven//:com_fasterxml_jackson_core_jackson_annotations",
            "@maven//:com_fasterxml_jackson_core_jackson_core",
            "@maven//:com_fasterxml_jackson_core_jackson_databind",
            "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jdk8",
            "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
            "@maven//:com_fasterxml_jackson_module_jackson_module_parameter_names",
            "@maven//:com_jayway_jsonpath_json_path",
            "@maven//:com_vaadin_external_google_android_json",
            "@maven//:jakarta_activation_jakarta_activation_api",
            "@maven//:jakarta_annotation_jakarta_annotation_api",
            "@maven//:jakarta_xml_bind_jakarta_xml_bind_api",
            "@maven//:net_bytebuddy_byte_buddy",
            "@maven//:net_bytebuddy_byte_buddy_agent",
            "@maven//:net_minidev_accessors_smart",
            "@maven//:net_minidev_json_smart",
            "@maven//:org_apache_logging_log4j_log4j_api",
            "@maven//:org_apache_logging_log4j_log4j_to_slf4j",
            "@maven//:org_apache_tomcat_embed_tomcat_embed_core",
            "@maven//:org_apache_tomcat_embed_tomcat_embed_el",
            "@maven//:org_apache_tomcat_embed_tomcat_embed_websocket",
            "@maven//:org_apiguardian_apiguardian_api",
            "@maven//:org_assertj_assertj_core",
            "@maven//:org_hamcrest_hamcrest",
            "@maven//:org_junit_jupiter_junit_jupiter",
            "@maven//:org_junit_jupiter_junit_jupiter_api",
            "@maven//:org_junit_jupiter_junit_jupiter_engine",
            "@maven//:org_junit_jupiter_junit_jupiter_params",
            "@maven//:org_junit_platform_junit_platform_commons",
            "@maven//:org_junit_platform_junit_platform_engine",
            "@maven//:org_mockito_mockito_core",
            "@maven//:org_mockito_mockito_junit_jupiter",
            "@maven//:org_objenesis_objenesis",
            "@maven//:org_opentest4j_opentest4j",
            "@maven//:org_ow2_asm_asm",
            "@maven//:org_skyscreamer_jsonassert",
            "@maven//:org_slf4j_jul_to_slf4j",
            "@maven//:org_slf4j_slf4j_api",
            "@maven//:org_springframework_boot_spring_boot",
            "@maven//:org_springframework_boot_spring_boot_autoconfigure",
            "@maven//:org_springframework_boot_spring_boot_loader",
            "@maven//:org_springframework_boot_spring_boot_starter",
            "@maven//:org_springframework_boot_spring_boot_starter_json",
            "@maven//:org_springframework_boot_spring_boot_starter_logging",
            "@maven//:org_springframework_boot_spring_boot_starter_test",
            "@maven//:org_springframework_boot_spring_boot_starter_tomcat",
            "@maven//:org_springframework_boot_spring_boot_starter_web",
            "@maven//:org_springframework_boot_spring_boot_test",
            "@maven//:org_springframework_boot_spring_boot_test_autoconfigure",
            "@maven//:org_springframework_spring_aop",
            "@maven//:org_springframework_spring_beans",
            "@maven//:org_springframework_spring_context",
            "@maven//:org_springframework_spring_core",
            "@maven//:org_springframework_spring_expression",
            "@maven//:org_springframework_spring_jcl",
            "@maven//:org_springframework_spring_test",
            "@maven//:org_springframework_spring_web",
            "@maven//:org_springframework_spring_webmvc",
            "@maven//:org_xmlunit_xmlunit_core",
            "@maven//:org_yaml_snakeyaml",
        ],
)
